src/test/deca/context/invalid/println-class.deca
// Description:
//    Condition de la règle 3.31 non respectée 
//
// Resultats:
//    Ligne 16: Arguments of a print can only be float, int or string (rules 3.31)
//
// Historique:
//    cree le 16/01/2023

class A{

}

{
    A a = new A();
    println(a);
}
